# kapudan

./: .gitignore  .ycm_extra_conf.py  AUTHORS  CMakeLists.txt  COPYING  PKGBUILD  README  README.md  TODO  about.py  changenameto  deps  go  kapudan-autostart.desktop  kapudan-rootactions  kapudan.desktop  setup.py
.tx/: config
data/: kaptan.qrc  kapudan.desktop.in  kapudan.qrc  kapudan.svgz  ksuperkey.desktop
data/kde-themes/: caledonia.style  caledonia.style_  dark.style  default.style  helium.style_  honey.style  inversion.style  north.style  obsidian.style  soft.style  white.style
help/en/: main_help.rst
help/tr/: main_help.rst
kauth/: CMakeLists.txt  checkdaemon.action  daemon.cpp  daemon.h  daemon_helper.cpp  daemon_helper.h  org.chakraproject.kapudan.daemon.actions
po/: ar.po  az.po  az.po_old  bg.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  de.po_new  de.po_old  el.po  eo.po  es.po  es.po_old  fa_IR.po  fr.po  gl.po  hr.po  hr.po_old  hu.po  id.po  it.po  it.po_old  ja.po  kapudan.pot  kn.po  lt.po  my_MM.po  nb_NO.po  nl.po  pl.po  pl.po_new  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sr@latin.po  (+11 more)
src/: CMakeLists.txt  kaptan.py  kapudan.cpp  kapudan.h  kapudan.py  menu.h  progress_pie.cpp  progress_pie.h
src/kaptan/screens/: scrGoodbye.py  scrMenu.py  scrMouse.py  scrPackage.py  scrSmolt.py  scrSummary.py
src/kaptan/tools/: localedata.py  tools.py
src/kapudan/: screen.h  screen.py  screens.h
src/kapudan/screens/: _scrKeyboard.py  _scrSearch.py  scrAvatar.py  scrExtra.py  scrFolder.cpp  scrFolder.h  scrFolder.py  scrGoodbye.py  scrKeyboard.py  scrKsuperkey.py  scrMenu.py  scrMouse.py  scrPackage.py  scrSearch.py  scrSecurity.py  scrServices.py  scrStyle.py  scrSummary.py  scrWallpaper.py  scrWelcome.cpp  scrWelcome.h  scrWelcome.py  styleItem.py  wallpaperItem.py
src/kapudan/tools/: config.py  daemon.py  desktop_parser.py  kapudan_menu.py  ksuperkey.py  localedata.py  progress_pie.py  rcconf.py  repos.py  spun_tools.py  spunrc.py  tools.py  xdg_user_dirs.py
ui/: ui_kaptan.ui  ui_kapudan.ui  ui_scrAvatar.ui  ui_scrExtra.ui  ui_scrFolder.py  ui_scrFolder.ui  ui_scrGoodbye.ui  ui_scrKeyboard.ui  ui_scrKsuperkey.ui  ui_scrMenu.ui  ui_scrMouse.ui  ui_scrPackage.ui  ui_scrSearch.ui  ui_scrSecurity.ui  ui_scrServices.ui  ui_scrSmolt.ui  ui_scrStyle.ui  ui_scrSummary.ui  ui_scrWallpaper.ui  ui_scrWelcome.ui
